Added API call with simple text display
Successfully calls datamuse API with a word from user input and displays text results of synonym.

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
-  background-color: lightblue;
+  background-color: #EFE8E3;
 }
 
 h1 {
-  color: white;
+  color: #332E3C;
   text-align: center;
 }
 
 p {
-  font-family: verdana;
-  font-size: 20px;
+    font-family: verdana;
+    font-size: 20px;
+    color: #332E3C;
 }
