--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,33 @@
 .cinnaBody {
-  background-color: #EFE8E3;
+    background-color: #EFE8E3;
+    text-align:center;
+    padding: 10px;
 }
 
 h1 {
-  color: #332E3C;
-  text-align: center;
+    color: #332E3C;
+    text-align: center;
 }
 
 p {
     font-family: verdana;
     font-size: 20px;
     color: #332E3C;
+}
+
+.header {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    padding: 20px;
+}
+
+.resultsArea {
+    text-align:center;
+    padding: 10px;
+}
+
+.search{
+    padding: 10px;
 }
