--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .cinnaBody {
     background-color: #EFE8E3;
     text-align:center;
@@ -10,7 +12,7 @@ h1 {
 }
 
 p {
-    font-family: verdana;
+    font-family: Open Sans;
     font-size: 20px;
     color: #332E3C;
 }
@@ -29,7 +31,7 @@ p {
 }
 
 .search{
-    padding: 60px 20px 70px 20px   
+    padding: 60px 20px 60px 20px   
 }
 
 .searchbutton{
@@ -52,5 +54,6 @@ p {
     background-color: #EFE8E3;
     font-size: 25px;
     font-weight: 500;
+    font-family: Open Sans;
     color: #332E3C;  
 }
