--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ p {
     border-radius: 60px;
     border-color: #332E3C;
     border-width: 3.5px;
-    padding: 15px 70px;
+    padding: 20px 60px 20px 60px;
     background-color: #EFE8E3;
     font-size: 25px;
     font-weight: 300;
