--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,9 @@ p {
     color: #332E3C;  
 }
 
+.resultsarea{
+    font-family: Open Sans;
+    font-size: 25px;
+    padding: 60px 20px 60px 20px;
+
+}
