--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 .cinnaBody {
     background-color: #EFE8E3;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
+
 }
 
 
@@ -9,8 +10,12 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
-    padding: 20px 0px 20px 0px;
+    width: 80%;
+    padding: 20px 20px 20px 20px;
+    min-width: 220px;
+    max-width: 420px;
+
+    
 }
 
 .searchform {
@@ -27,11 +32,13 @@
     color: #332E3C;
     text-align: center;
 
+
 }
 
 .search {
     font-family: 'Open Sans', sans-serif;
-    padding: 20px 20px 20px 20px;
+    padding: 50px 20px 20px 20px;
+    
 
 
 }
@@ -42,10 +49,10 @@
     border-width: 2.5px;
     padding: 20px 60px 20px 60px;
     background-color: #EFE8E3;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 300;
-    color: #332E3C;
-    background-color: white;
+    color: #ffffff;
+    background-color: #332E3C;
 
 }
 
@@ -80,24 +87,44 @@ p {
 }
 
 .card {
-      margin: 1rem;
+  margin: 1.5rem;
   background: white;
-  box-shadow: 2px 4px 25px rgba(0, 0, 0, .1);
-  border-radius: 12px;
+  box-shadow: 2px 6px 10px rgba(0, 0, 0, .1);
+  border-radius: 13px;
   overflow: hidden;
   transition: all .2s linear;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  color: #332E3C;
+  min-width: 250px;
+  max-width: 2000px;
+  min-height: 200px;
+  text-transform: capitalize;
+
     
 }
 
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 500px) {
   .card {
-    flex: 1 1 calc(50% - 2rem);
+    flex: 1 1 calc(50% - 7rem);
+      
+      
   }
 }
 
 @media screen and (min-width: 900px) {
   .card {
     flex: 1 1 calc(33% - 2rem);
+      
   }
 }
+
+@media screen and (max-width: 600px) {
+   .searchform{
+        width: 80%;
+  }
+    
+    
+    
+
