--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ p {
 }
 
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
   .card {
     flex-shrink: 1;
       
