Revert "testing media rules"
This reverts commit 520abea56003ebab0108b1f5c724a19560eb8f94.

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ p {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .card {
     flex-shrink: 1;
       
@@ -128,10 +128,10 @@ p {
   }
 }
 
-/*@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
    .searchform{
         width: 80%;
-  }*/
+  }
     
     
     
